--- a/SpotTO/SpotTO.html
+++ b/SpotTO/SpotTO.html
@@ -53,6 +53,6 @@
                      Find the right opportunity today and set yourself apart in the competitive world of university admissions and beyond!🚀</p>
                 </div>
     </div>
-    <script src="script.js"></script>
+    <script src="nav.js"></script>
 </body>
 </html>
